<?xml version="1.0"?>
<package format="2">
  <name>uwb_anchors</name>
  <version>0.1.0</version>
  <description>UWB anchors Gazebo simulation package for Clover drone</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Основные зависимости -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>

  <!-- Для работы с MAVLink -->
  <depend>mavlink</depend>
  
  <!-- Для интеграции с Clover -->
  <depend>clover</depend>
  <depend>led_msgs</depend>

  <!-- Дополнительные зависимости для плагинов -->
  <build_depend>gazebo_dev</build_depend>
  <build_depend>libgazebo11-dev</build_depend>

  <export>
    <!-- Указываем, что это Gazebo плагин -->
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>